@@ -10,17 +10,14 @@
 # the correct versions may need to be set. On those
 # systems, the 'autoreconf' line should be changed to:
 # AUTOMAKE=automake-1.10 ACLOCAL=aclocal-1.10 autoreconf
-# (and these systems probably need gmake instead of make)
 
 # older versions of libtoolize do not support --install
 # so you might need to remove that (with newer versions
 # it is needed)
 libtoolize -c --install
 autoreconf --install
-./configure
+./configure --with-examples --with-drill # --with-pyldns
 make
 make doc  # needs doxygen for the html pages
-(cd examples && autoreconf && ./configure && make)
-(cd drill && autoreconf && ./configure && make)
 (cd pcat && autoreconf && ./configure && make)
 (cd examples/nsd-test && autoreconf && ./configure && make)
