@@ -936,7 +936,7 @@ ldns_rr_list_rr(const ldns_rr_list *rr_list, size_t nr)
 }
 
 ldns_rr_list *
-ldns_rr_list_new()
+ldns_rr_list_new(void)
 {
 	ldns_rr_list *rr_list = LDNS_MALLOC(ldns_rr_list);
         if(!rr_list) return NULL;
@@ -1395,25 +1395,7 @@ ldns_rr_list_clone(const ldns_rr_list *rrlist)
 }
 
 
-int
-qsort_rr_compare(const void *a, const void *b)
-{
-	const ldns_rr *rr1 = * (const ldns_rr **) a;
-	const ldns_rr *rr2 = * (const ldns_rr **) b;
-
-	if (rr1 == NULL && rr2 == NULL) {
-		return 0;
-	}
-	if (rr1 == NULL) {
-		return -1;
-	}
-	if (rr2 == NULL) {
-		return 1;
-	}
-	return ldns_rr_compare(rr1, rr2);
-}
-
-int
+static int
 qsort_schwartz_rr_compare(const void *a, const void *b)
 {
 	int result = 0;
